added base/dtd to auto classpath configuration
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3935 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/src/start/org/ofbiz/base/start/start.properties
+++ b/base/src/start/org/ofbiz/base/start/start.properties
@@ -18,6 +18,9 @@ java.tools.jar.required=true
 # --- External Base configuration files (relative to ofbiz.home)
 ofbiz.base.config=base/config
 
+# --- External Base schema files (relative to ofbiz.home)
+ofbiz.base.schema=base/dtd
+
 # --- External Base libraries (relative to ofbiz.home)
 ofbiz.base.lib=base/lib
 
