--- a/base/src/start/org/ofbiz/base/start/test.properties
+++ b/base/src/start/org/ofbiz/base/start/test.properties
@@ -3,8 +3,14 @@
 # $Id$
 ####
 
+# --- Java LIB tools.jar is not required
+java.tools.jar.required=false
+
 # --- External Base configuration files (relative to ofbiz.home)
 ofbiz.base.config=base/config
+
+# --- External Base schema files (relative to ofbiz.home)
+ofbiz.base.schema=base/dtd
 
 # --- External Base libraries (relative to ofbiz.home)
 ofbiz.base.lib=base/lib
