--- a/base/src/start/org/ofbiz/base/start/install.properties
+++ b/base/src/start/org/ofbiz/base/start/install.properties
@@ -9,6 +9,9 @@ java.tools.jar.required=false
 # --- External Base configuration files (relative to ofbiz.home)
 ofbiz.base.config=base/config
 
+# --- External Base schema files (relative to ofbiz.home)
+ofbiz.base.schema=base/dtd
+
 # --- External Base libraries (relative to ofbiz.home)
 ofbiz.base.lib=base/lib
 
