Changed to build example, just in case we want to use it, won't hurt anything
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3996 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,8 @@
                workeffort/build.xml,product/build.xml,marketing/build.xml,
                order/build.xml,manufacturing/build.xml,
                accounting/build.xml,ecommerce/build.xml,
-               securityext/build.xml,pos/build.xml,webtools/build.xml"/>
+               securityext/build.xml,pos/build.xml,webtools/build.xml
+               example/build.xml"/>
 
     <filelist id="tests-subdirs" dir="."
         files="base/build.xml,components/entity/build.xml"/>
