Added controller.xml cache timeouts; changed all timeouts to 1000ms, or 1s to slightly improve performance, but still help things reload well during development; should still of course be commented out for production
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4017 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -27,31 +27,34 @@ security.SecurityGroupPermissionCache.maxSize=0
 security.SecurityGroupPermissionCache.expireTime=1800000
 
 # Examples for per-delegator Entity Engine cache settings
-#entity.FindAll.default.expireTime=0
-#entity.FindAll.default.useSoftReference=true
-#entity.FindByAnd.default.expireTime=0
-#entity.FindByAnd.default.useSoftReference=true
-#entity.FindByPrimaryKey.default.expireTime=0
-#entity.FindByPrimaryKey.default.useSoftReference=true
+#entitycache.entity.default.ServerHitType.expireTime=0
+#entitycache.entity.default.ServerHitType.useSoftReference=true
+#entitycache.entity-list.default.ProductPriceRule.expireTime=0
+#entitycache.entity-list.default.ProductPriceRule.useSoftReference=true
 
 # Wokflow related cache
 workflow.processmgr.useSoftReference=true
 workflow.client.useSoftReference=true
 
-# Development Mode - comment to cache BSH scripts, etc
-minilang.SimpleMethodsDirect.expireTime=1
-minilang.SimpleMethodsResource.expireTime=1
-minilang.SimpleMethodsURL.expireTime=1
+# Development Mode - comment these out to better cache BSH scripts, etc
+#These are all cleared by default every 1000 milliseconds, or one second
+minilang.SimpleMethodsDirect.expireTime=1000
+minilang.SimpleMethodsResource.expireTime=1000
+minilang.SimpleMethodsURL.expireTime=1000
 
-script.BshLocationParsedCache.expireTime=1
-script.BshBsfParsedCache.expireTime=1
+script.BshLocationParsedCache.expireTime=1000
+script.BshBsfParsedCache.expireTime=1000
 
-webapp.BsfEvents.expireTime=1
-webapp.JasperReportsCompiled.expireTime=1
+webapp.BsfEvents.expireTime=1000
+webapp.JasperReportsCompiled.expireTime=1000
+webapp.ConfigXMLReader.Config.expireTime=1000
+webapp.ConfigXMLReader.Handler.expireTime=1000
+webapp.ConfigXMLReader.Request.expireTime=1000
+webapp.ConfigXMLReader.View.expireTime=1000
 
-widget.form.locationResource.expireTime=1
-widget.form.webappResource.expireTime=1
-widget.screen.locationResource.expireTime=1
-widget.screen.webappResource.expireTime=1
-widget.tree.locationResource.expireTime=1
-widget.tree.webappResource.expireTime=1
+widget.form.locationResource.expireTime=1000
+widget.form.webappResource.expireTime=1000
+widget.screen.locationResource.expireTime=1000
+widget.screen.webappResource.expireTime=1000
+widget.tree.locationResource.expireTime=1000
+widget.tree.webappResource.expireTime=1000
