Added i18n patch from Olivier Heintz
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4018 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/order/config/OrderUiLabels.properties
+++ b/components/order/config/OrderUiLabels.properties
@@ -12,6 +12,7 @@ AccountingCardNumber=Card Number
 AccountingCardType=Card Type
 AccountingCompanyNameAccount=Company Name on Account
 AccountingCompanyNameCard=Company Name on Card
+AccountingCurrency=Currency
 AccountingCreditCard=Credit Card
 AccountingEFTAccount=EFT Account
 AccountingExpirationDate=Expiration Date
@@ -90,11 +91,17 @@ checkhelper.totals_do_not_match_order_total=Totals do not match order total.
 checkhelper.sales_order_lines_lookup_failed=ERROR: Sales Order Lines lookup failed.
 checkhelpertotalsdonotmatchordertotal=Totals do not match order total.
 
+CommonAdd=Add
 CommonAddDefault=Add Default
 CommonAddressLine=Address Line
 CommonAll=All
 CommonAllowSolicitation=(allow solicitation?)
 CommonAny=Any
+CommonAnyOrderStatus=Any Order Status
+CommonAnyOrderType=Any Order Type
+CommonAnyRoleType=Any Role Type
+CommonAnyStore=Any Store
+CommonAnyWebSite=Any Web Site
 CommonAnyReturnStatus=Any return status
 CommonApply=Apply
 CommonAttentionName=Attention Name
@@ -104,6 +111,7 @@ CommonBenefit=Benefit
 CommonBy=By
 CommonCancel=Cancel
 CommonChange=Change
+CommonCancelAll=Cancel All
 CommonCity=City
 CommonComment=Comment
 CommonContinue=Continue
@@ -118,6 +126,8 @@ CommonDays=Days
 CommonDescription=Description
 CommonDetails=Details
 CommonDisabled=disabled
+CommonEdit=Edit
+CommonGoBack=Go Back
 CommonFind=Find
 CommonFrom=From
 CommonGroup=Group
@@ -149,6 +159,7 @@ CommonRegistred=Registered User Login
 CommonReports=Reports
 CommonRequired=Required
 CommonReturnStatus=Return Status
+CommonSave=Enregistrer
 CommonSelectOne=Select One
 CommonSelected=selected
 CommonSet=Set
@@ -220,12 +231,16 @@ FacilityWaitEntireOrderReady=Please wait until the entire order is ready before 
 item.product_not_found=Product not found, not adding to cart. [productId\: ${productId}]
 
 OrderAddCode=Add Code
+OrderAddNote=Add Note
 OrderAddToOrder=Add To Order
 OrderAdjustment=Adjustment
 OrderAdjustments=Adjustments
+OrderAddress=Address
+OrderAllowSplit=Allow Split
 OrderApproveOrder=Approve Order
 OrderBeSureIncludeOrder=Be sure to include your order
 OrderCancelAllItems=Cancel all Items
+OrderCancelled=Cancelled
 OrderCannotBeChanged=(cannot be changed without clearing order.)
 OrderCartTotal=Cart Total
 OrderClearOrder=Clear Order
@@ -238,6 +253,7 @@ OrderCreateOrder=Create Order
 OrderCreateReturn=Create return
 OrderCurrentStatus=Current Status
 OrderCustomerPo=Custumer PO#
+OrderDate=Order Date
 OrderDateOrdered=Date Ordered
 OrderDesiredDeliveryDate=Desired Delivery Date
 OrderDestination=Destination
@@ -259,16 +275,22 @@ OrderInvoices=Invoices
 OrderLookupOrder=Lookup Order(s)
 OrderLookupReturn=Lookup Return(s)
 OrderNoGiftWrap=No Gift Wrap
+OrderNoNotes=No notes for this order.
 OrderNoOrderFound=No Order Found
 OrderNoOrderItemsToDisplay=No order items to display.
+OrderNotShipped=Not Shipped
 OrderNoReturnFound=No return found.
 OrderNoReturnFoundWithId=No return found with return ID 
+OrderNote=Note
+OrderNotes=Notes
+OrderNotesCreateNew=Create New
 OrderNotUsedForPurchase=Not Used For Purchase Orders
 OrderNotUsedForSales=Not Used For Sales Orders
 OrderOfflineCheckMoney=Offline: Check/Money Order
 OrderOrder=Order
 OrderOrderConfirmation=Order Confirmation
 OrderOrderDate=Order Date
+OrderOrdered=Ordered
 OrderOrderEntry=Order Entry
 OrderOrderEntryCustomerInfo=Order Entry Customer Info
 OrderOrderEntryPaymentSettings=Order Entry Payment Settings
@@ -294,6 +316,7 @@ OrderPurchaseOrder=Purchase Order
 OrderQuantity=Quantity
 OrderRecalculateOrder=Recalculate Order
 OrderReceiveReturn=Receive Return
+OrderRemaining=Remaining
 OrderRemainingSubTotal=Remaining SubTotal
 OrderRequiredForSO=Required for SO
 OrderReturned=Returned
@@ -309,11 +332,13 @@ OrderSalesTax=Sales Tax
 OrderSelectPartyToOrder=Select type of party to associate to order
 OrderSelectedGiftNotAvailableForAll=Selected Gift Wrap is not available for all items. The items which are available have been selected, the others remain unchanged.
 OrderSendEmail=Send Email
+OrderShipGroup=Ship Group
 OrderShipmentInformation=Shipment Information
 OrderSplittingPreference=Splitting Preference
 OrderStartDateTime=Start Date/Time
 OrderStatusHistory=Status History
 OrderSubTotal=Sub.Total
+OrderSurvey=Survey
 OrderThisOrderGift=This order is a gift
 OrderThisOrderNotGift=This order is not a gift
 OrderTotalDue=Total Due
@@ -324,6 +349,7 @@ OrderTrackingNumber=Tracking Number
 OrderUnitList=Unit / List
 OrderUseDefaultComment=Use as default comment for next entry
 OrderUseDefaultDesiredDeliveryDate=Use as default desired delivery date for next entry
+OrderViewEditDelivery=View/Delivery Schedule Info
 OrderViewPermissionError=You do not have permission to view this page. ("ORDERMGR_VIEW" or "ORDERMGR_ADMIN" needed)
 
 PageTitleLogin=Login
