--- a/components/product/config/catalog.properties
+++ b/components/product/config/catalog.properties
@@ -4,12 +4,11 @@
 
 # -- Image upload path on the server
 image.server.path=${env.ofbiz.home}/components/images/webapp/images
+
 # -- The prefix to put on auto-generated image urls (can be relative or absolute, whatever you want)
 image.url.prefix=/images
-
-image.filename.format=products/${size}/${productId}
+image.filename.format=${location}/${type}/${id}
 
 # -- Which default top category to display... --
 top.category.default=CATALOG1
-
 all.product.category=CATALOG1
