Added i18n of Contact Us from Uli Suppa; Jira #OFBIZ-53
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4089 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/ecommerce/config/EcommerceUiLabels.properties
+++ b/components/ecommerce/config/EcommerceUiLabels.properties
@@ -81,6 +81,7 @@ CommonClear=Clear
 CommonClickHere=Click Here
 CommonComment=Comment
 CommonComments=Comments
+CommonContactUs=Contact Us
 CommonContinue=Continue
 CommonCouldBeUsedAs=Could be Used as
 CommonCreate=Create
