Added patch from Hans Bakker for the rental product implementation
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4140 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/accounting/config/AccountingUiLabels.properties
+++ b/components/accounting/config/AccountingUiLabels.properties
@@ -118,6 +118,7 @@ AccountingToParty=To Party
 AccountingToPartyId=To Party Id
 AccountingTotal=Total
 AccountingType=Type
+AccountingUpdateAvailability=Update the availability
 AccountingUpdateBillingAccountPermissionError=Security Error: to run updateAcctgTrans you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission<br>
 AccountingUpdateBillingAccountRolePermissionError=Security Error: to run updateBillingAccountRole you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
 AccountingUpdateBillingAccountTermPermissionError=Security Error: to run updateBillingAccountTerm you must have the ACCOUNTING_UPDATE or ACCOUNTING_ADMIN permission
@@ -125,41 +126,66 @@ AccountingUpdateBillingAccount=Update Billing Account
 AccountingUpdatePaymentPermissionError=Security Error: To Update a Payment you must either be the to or from party or have the PAY_INFO_UPDATE or PAY_INFO_ADMIN permissions.
 AccountingViewPermissionError=You do not have permission to view this page. ("ACCOUNTING_VIEW" or "ACCOUNTING_ADMIN" needed)
 CommonAccounting=Accounting
+CommonAugust=August
+CommonApril=April
 CommonAttn=Attn
 CommonCreateNew=Create New
 CommonComments=Comments
+CommonDay=Day
+CommonDecember=December
 CommonDescription=Description
 CommonEdit=Edit
+CommonFebruary=February
 CommonFromDate=From Date
 CommonFrom=From
+CommonFriday=Friday
 CommonId=ID
+CommonJanuary=January
+CommonJune=June
+CommonJuly=July
 CommonLogin=Login
 CommonLogout=Logout
 CommonLookup=Look Up
 CommonMain=Main
+CommonMay=May
+CommonMarch=March
+CommonMonth=Month
+CommonMonday=Monday
 CommonNA=N/A
 CommonNext=Next
 CommonNotModifRecreat=cannot change without re-creating
+CommonNovember=November
+CommonOctober=October
 CommonPassword=Password\:
 CommonPrevious=Previous
 CommonQuantity=Quantity
+CommonQuarter=Quarter
 CommonRegistred=Registered User Login
 CommonRemove=Remove
+CommonSaturday=Saturday
 CommonSave=Save
+CommonSeptember=September
 CommonSet=Set
 CommonSequence=Sequence
 CommonShowLookupFields=Show Lookup Fields
+CommonSunday=Sunday
 CommonTest=Test in english
+CommonThis=This
 CommonThruDate=Thru Date
 CommonThru=Thru
+CommonThursday=Thursday
 CommonTitle=Title
 CommonTo=To
+CommonTuesday=Tuesday
 CommonUom=UOM
 CommonUpdate=Update
 CommonUsername=Username\:
 CommonValue=Value
 CommonView=View
+CommonWeek=Week
+CommonWendesday=Wendesday
 CommonWelcome=Welcome
+
 PageTitleEditBillingAccount=Edit Billing Account
 PageTitleEditBillingAccountInvoices=Edit Billing Account Invoices
 PageTitleEditBillingAccountPayments=Edit Billing Account Payments
