--- a/components/ecommerce/config/EcommerceUiLabels.properties
+++ b/components/ecommerce/config/EcommerceUiLabels.properties
@@ -184,11 +184,14 @@ EcommerceLastViewed=Last Viewed
 EcommerceLastCategories=Last Categories
 EcommerceLastProducts=Last Products
 EcommerceLastSearches=Last Searches
+EcommerceLength=Length
 EcommerceListDoesNotBelong=does not belong to you, please try again
 EcommerceListItems=Shopping List Items
 EcommerceListItemsTotalPrice=This List Items Total Price
 EcommerceListName=List Name
 EcommerceListType=List Type
+EcommerceMakeBooking=Make a booking
+EcommerceNbrPersons=Persons
 EcommerceNewShoppingList=New Shopping List
 EcommerceNoParent=No Parent
 EcommerceNoShoppingListsCreate=No shopping lists to select, create a new one
@@ -219,6 +222,7 @@ EcommerceShoppingListError=ERROR: The specified shopping list (with
 EcommerceShoppingListPriceTotals=Shopping List Price Totals
 EcommerceShoppingListReorder=Shopping List Re-Order Info
 EcommerceSpecialOffers=Special Offers
+EcommerceStartDate=Start</br>Date
 EcommerceToAddSelectedItemsToShoppingList=to add selected items to a shopping list
 EcommerceToCart=to Cart
 EcommerceTotalPrice=Total Price
@@ -269,6 +273,7 @@ OrderGrandTotal=Grand Total
 OrderHistory=Order&nbsp;History
 OrderHowShallWeShipIt=How shall we ship it
 OrderHowShallYouPay=How shall you pay
+OrderInformationAboutYou=Information about you
 OrderIntructions=Instructions
 OrderInvoice=Invoice
 OrderIsThisGift=Is This a Gift
@@ -277,6 +282,7 @@ OrderMoneyOrder=Mail Check/Money Order
 OrderNoOrderFound=No Orders Found
 OrderNoReturnableItems=No returnable items found for order
 OrderNotYetOrdered=Not Yet Ordered
+OrderOptions=Order options
 OrderOrder=Order
 OrderOrderItems=Order Items
 OrderPleaseShipItemsBecomeAvailable=Please ship items I ordered as they become available (you may incur additional shipping charges)
