--- a/components/order/src/org/ofbiz/order/order/PackageMessages.properties
+++ b/components/order/src/org/ofbiz/order/order/PackageMessages.properties
@@ -7,6 +7,7 @@ items.none=ERROR: There are no items to order
 
 # 0=productId
 product.not_found=Could not find the product with ID [{0}], cannot be purchased.
+fixed_asset_product_not_found=Could not find a related rental fixed asset for the product with ID [{0}], cannot be rented.
 
 # 0=productName, 1=productId
 product.not_yet_for_sale=Tried to order the Product {0} (productId: {1}). This product has not yet been made available for sale. Please remove from your order.
