A couple little product content form/label improvements
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4163 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/product/config/ProductUiLabels.properties
+++ b/components/product/config/ProductUiLabels.properties
@@ -800,7 +800,7 @@ ProductPurchaseFrom=Purchase From
 ProductPurchaseFromDate=Purchase From Date
 ProductPurchaseOrder=Purchase Order
 ProductPurchaseOrderNumber=Purchase Order Number
-ProductPurchaseThru=PurchaseThru
+ProductPurchaseThru=Purchase Thru
 ProductPurchaseThruDate=Purchase Thru Date
 ProductPurposeTypeNotFoundWithId=Purpose Type not found with ID
 ProductQoh=QOH
