Added patch for applying features from a group to a product from Si Chen; Jira #OFBIZ-92
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4177 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/product/config/ProductUiLabels.properties
+++ b/components/product/config/ProductUiLabels.properties
@@ -307,7 +307,8 @@ ProductAddProduct=Add Product
 ProductAddProductAttributeNameValueType=Add Product Attribute (enter Name, Value and Type)
 ProductAddProductCategoryMember=Add Product Category Member
 ProductAddProductCategoryMemberFromDate=Add ProductCategoryMember (select Category, enter From Date)
-ProductAddProductFeatureFromCategory=Add Product Feature From Category
+ProductAddProductFeatureFromCategory=Add Product Feature From Category or Group
+ProductAddProductFeatureFromGroup=Add Product Feature From Group
 ProductAddProductFeatureTypeId=Add Product Feature with Type and ID Code
 ProductAddProductKeyword=Add product keyword
 ProductAddPromoRule=Add New Promo Rule
@@ -392,6 +393,8 @@ ProductCheckInventory=Check Inventory
 ProductChildCategoryId=Child Category ID
 ProductChild=Child
 ProductChildGroupId=Child Group ID
+ProductChooseFeatureCategory=Choose a Feature Category
+ProductChooseFeatureGroup=Choose a Feature Group
 ProductChooseTopCategory=Choose Top Category
 ProductComments=Comments
 ProductCompanySubtitle=Part of the Open For Business Family of Open Source Software
