Added template.ftl caches to the expire list for development, are now cached when running through screen widget for better performance
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4194 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -58,3 +58,7 @@ widget.screen.locationResource.expireTime=1000
 widget.screen.webappResource.expireTime=1000
 widget.tree.locationResource.expireTime=1000
 widget.tree.webappResource.expireTime=1000
+
+template.ftl.general.expireTime=1000
+template.ftl.location.expireTime=1000
+
