Added some cleanup patches from Jacopo Cappellato
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4210 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/product/config/ProductUiLabels.properties
+++ b/components/product/config/ProductUiLabels.properties
@@ -1154,3 +1154,4 @@ Categories=Categories
 UpdateCategories=Update Categories
 PublishAndView=Publish & View
 RemoveFromSite=Remove From Site
+ProductSubProduct=SubProduct
