added code to pass IP address to payment processor from visit; also added code to auto re-auth credit cards before a capture if the auth date is passed a pre-defined limit
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4237 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/accounting/config/payment.properties
+++ b/components/accounting/config/payment.properties
@@ -4,6 +4,20 @@
 ####
 
 ############################################
+# General Payment Gateway Configuration
+############################################
+
+# time (in days) to auto re-auth before capture (set to 0 to not auto re-auth)
+# when a capture is performed; the auth date is checked and a re-auth is done
+# before the capture if the date exceeds the amount defined below.
+
+payment.general.reauth.disc.days=90
+payment.general.reauth.amex.days=30
+payment.general.reauth.mc.days=30
+payment.general.reauth.visa.days=7
+payment.general.reauth.other.days=7
+
+############################################
 # CyberSource Configuration
 ############################################
 
