A number of cleanups and improvements to the screen stuff; refactor of category and product pages in ecommerce to use the screen widget, including lots of cleanups to not use the request so much and so on
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4243 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/product/config/ProductUiLabels.properties
+++ b/components/product/config/ProductUiLabels.properties
@@ -450,7 +450,7 @@ ProductDestination=Destination
 ProductDestinationFacility=Destination Facility
 ProductDestinationFacilityIs=Destination Facility is
 ProductDetailImage=Detail Image
-ProductDetailTemplate=Detail Template
+ProductDetailScreen=Detail Screen
 ProductDuplicateProduct=Duplicate Product
 ProductDuplicateRemoveSelectedWithNewId=Duplicate / Remove Selected with New ID
 ProductEditCatalog=Edit Catalog
