Changed timeouts to 10 seconds for longer rendering pages so that things don't reload so much
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4246 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -37,28 +37,28 @@ workflow.processmgr.useSoftReference=true
 workflow.client.useSoftReference=true
 
 # Development Mode - comment these out to better cache BSH scripts, etc
-#These are all cleared by default every 1000 milliseconds, or one second
-minilang.SimpleMethodsDirect.expireTime=1000
-minilang.SimpleMethodsResource.expireTime=1000
-minilang.SimpleMethodsURL.expireTime=1000
+#These are all cleared by default every 10000 milliseconds, or ten seconds
+minilang.SimpleMethodsDirect.expireTime=10000
+minilang.SimpleMethodsResource.expireTime=10000
+minilang.SimpleMethodsURL.expireTime=10000
 
-script.BshLocationParsedCache.expireTime=1000
-script.BshBsfParsedCache.expireTime=1000
+script.BshLocationParsedCache.expireTime=10000
+script.BshBsfParsedCache.expireTime=10000
 
-webapp.BsfEvents.expireTime=1000
-webapp.JasperReportsCompiled.expireTime=1000
-webapp.ConfigXMLReader.Config.expireTime=1000
-webapp.ConfigXMLReader.Handler.expireTime=1000
-webapp.ConfigXMLReader.Request.expireTime=1000
-webapp.ConfigXMLReader.View.expireTime=1000
+webapp.BsfEvents.expireTime=10000
+webapp.JasperReportsCompiled.expireTime=10000
+webapp.ConfigXMLReader.Config.expireTime=10000
+webapp.ConfigXMLReader.Handler.expireTime=10000
+webapp.ConfigXMLReader.Request.expireTime=10000
+webapp.ConfigXMLReader.View.expireTime=10000
 
-widget.form.locationResource.expireTime=1000
-widget.form.webappResource.expireTime=1000
-widget.screen.locationResource.expireTime=1000
-widget.screen.webappResource.expireTime=1000
-widget.tree.locationResource.expireTime=1000
-widget.tree.webappResource.expireTime=1000
+widget.form.locationResource.expireTime=10000
+widget.form.webappResource.expireTime=10000
+widget.screen.locationResource.expireTime=10000
+widget.screen.webappResource.expireTime=10000
+widget.tree.locationResource.expireTime=10000
+widget.tree.webappResource.expireTime=10000
 
-template.ftl.general.expireTime=1000
-template.ftl.location.expireTime=1000
+template.ftl.general.expireTime=10000
+template.ftl.location.expireTime=10000
 
