Refactored to use a CommonUiLabels.properties file, easy because fully using screen widget; other webapps may not be so easy, but shouldn't be too bad since they can use the Java API
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4263 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/ecommerce/config/EcommerceUiLabels.properties
+++ b/components/ecommerce/config/EcommerceUiLabels.properties
@@ -12,10 +12,10 @@
 ####
 # OFBiz UiLabel Properties used for the Ecommerce module
 #
-bu=Bulgarian
-de=German
-en=English
-gr=Greek
+
+AccountingCardNumber=Card Number
+AccountingPINNumber=PIN Number
+AccountingExpirationDate=Expiration Date
 
 AccountingAccount=Account
 AccountingAccountNumber=Account Number
@@ -54,101 +54,8 @@ AccountingPayWithWorldPay=Pay With WorldPay
 AccountingRoutingNumber=Routing Number
 AccountingUseAccount=Use Account
 
-CommonYouremail=Your email
-CommonEmailTo=Email To
-CommonMessage=Message
-CommonSend=Send
+#this should be an ecommerce prefix, not common prefix
 CommonSorryYouCannotSend=Sorry, you cannot send this page to a friend. Please select from either a category or product
-CommonGotoParent=Go To Parent
-
-CommonAdd=Add
-CommonAddDefault=Add Default
-CommonAll=All
-CommonAmount=Amount
-CommonAnd=And
-CommonAny=Any
-CommonAvailable=Available
-CommonBack=Back
-CommonBackToOptions=Back to Options
-CommonBenefit=Benefit
-CommonBy=By
-CommonCancel=Cancel
-CommonChecking=Checking
-CommonCheckoutAnonymous=Checkout Without Login
-CommonCheckoutAnonymousMsg=You may checkout without creating an account
-CommonChooseLanguage=Choose Language
-CommonClear=Clear
-CommonClickHere=Click Here
-CommonComment=Comment
-CommonComments=Comments
-CommonContactUs=Contact Us
-CommonContinue=Continue
-CommonCouldBeUsedAs=Could be Used as
-CommonCreate=Create
-CommonCreateNew=Create New
-CommonDate=Date
-CommonDays=Days
-CommonDelete=Delete
-CommonDescription=Description
-CommonDetails=Details
-CommonEdit=Edit
-CommonEmailPassword=Email Password
-CommonExpire=Expire
-CommonExpires=Expires
-CommonFieldsMarkedAreRequired=Fields marked with (*) are required.
-CommonFind=Find
-CommonForgotYourPassword=Forgot Your Password
-CommonFrom=From
-CommonGetPasswordHint=Get Password Hint
-CommonGoBack=Go Back
-CommonInformation=Information
-CommonInThe=In The
-CommonLanguageTitle=Language
-CommonList=List
-CommonLoginHere=log in here
-CommonLogin=Login
-CommonLogout=Logout
-CommonMain=Main
-CommonMatched=Matched
-CommonMayCreate=Create
-CommonMayCreateNewAccountHere=You may create a new account here
-CommonMore=More
-CommonNewUser=New User
-CommonNext=Next
-CommonNo=No
-CommonNot=Not
-CommonNotYou=Not You
-CommonOn=On
-CommonOpenNewWindow=Open in New Window
-CommonPassword=Password
-CommonPrevious=Previous
-CommonProfile=Profile
-CommonQualifier=Qualifier
-CommonQuantity=Quantity
-CommonQuickAdd=Quick Add
-CommonQuickAddList=Quick Add To Shopping List
-CommonRegistred=Registered User
-CommonRemove=Remove
-CommonReview=Review
-CommonSave=Save
-CommonSavings=Savings
-CommonSearchResultfor=Search Results for
-CommonSelectAll=Select All
-CommonStatus=Status
-CommonSubtotal=Subtotal
-CommonSubTotal=Sub Total
-CommonTellAFriend=Tell-A-Friend
-CommonTitle=Title
-CommonTo=To
-CommonUpdated=Updated
-CommonUpdate=Update
-CommonUsed=Used
-CommonUsedAs=Used as
-CommonUsername=Username
-CommonView=View
-CommonWelcome=Welcome
-CommonWhere=Where
-CommonYes=Yes
 
 EcommerceActive=Active
 EcommerceAddAlltoCart=Add All to Cart
@@ -169,6 +76,7 @@ EcommerceCartTotal=Cart Total
 EcommerceCheckout=Checkout
 EcommerceChildListTotalPrice=Child Lists Total Price
 EcommerceChildShoppingList=Child Shopping Lists
+EcommerceChooseAmount=Choose Amount
 EcommerceChooseVariations=Choose Variation
 EcommerceContinueShopping=Continue Shopping
 EcommerceCustomerReviews=Customer Reviews
@@ -244,9 +152,6 @@ EcommerceViewAllPromotions=View All Promotions
 EcommercePromotionDetails=Promotion Details
 EcommerceProductsForPromotion=Products For Promotion
 EcommerceErrorNoPromotionFoundWithID=ERROR: No promotion found with ID
-
-Factoids=Did you know?
-MostRecentlyViewed=Recently Viewed
 
 OrderAdjustments=Adjustments
 OrderAdvancePayment=Advance Payment
@@ -453,6 +358,7 @@ PartyWeight=Weight
 PartyYearsWork=Years Work
 PartyZipCodeMissing=Zip/Postal Code is missing
 PartyZipCode=Zip/Postal Code
+
 ProductAddProductsUsingDefaultQuantities=Add Products in this Category to the Cart using Default Quantities
 ProductAdvancedSearch=Advanced Search
 ProductAdvancedSearchIn=Advanced Search in
@@ -500,11 +406,6 @@ ProductRefineSearch=Refine Search
 ProductNewSearch=New Search
 ProductProductSearch=Product Search
 ProductYouSearchedFor=you searched for
-EcommerceChooseAmount=Choose Amount
-
-AccountingCardNumber=Card Number
-AccountingPINNumber=PIN Number
-AccountingExpirationDate=Expiration Date
 
 OrderChangeShippingAddress=Change Shipping Address
 OrderChangePaymentInfo=Change Payment Info
