Changed a few little files to start using the CommonUiLabels; of course, this doesn't mean that the local Common* labels have been cleared out and consolidated in the common file, that still needs to be done for all languages and all applications except for English in the ecommerce and product components
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4267 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/common/config/CommonUiLabels.properties
+++ b/components/common/config/CommonUiLabels.properties
@@ -1,6 +1,28 @@
 ####
 # OFBiz UiLabel Properties to be shared in all components
 #
+#  Copyright (c) 2003-2005 The Open For Business Project - www.ofbiz.org
+#
+#  Permission is hereby granted, free of charge, to any person obtaining a
+#  copy of this software and associated documentation files (the "Software"),
+#  to deal in the Software without restriction, including without limitation
+#  the rights to use, copy, modify, merge, publish, distribute, sublicense,
+#  and/or sell copies of the Software, and to permit persons to whom the
+#  Software is furnished to do so, subject to the following conditions:
+#
+#  The above copyright notice and this permission notice shall be included
+#  in all copies or substantial portions of the Software.
+#
+#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+#  OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+#  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+#  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+#  CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
+#  OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
+#  THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+#  $Id: CommonScreens.xml 2951 2004-08-03 16:33:32Z jonesde $
+
 bu=Bulgarian
 cz=Czeck
 de=German
@@ -12,12 +34,23 @@ gr=Greek
 pt=Portuguese
 zh=Chinese
 
+
+CommonAccepted=Accepted
+CommonAccounting=Accounting
+CommonActiveInactive=Active and Inactive
+CommonActiveOnly=Active Only
 CommonAdd=Add
+CommonAddA=Add a
 CommonAddDefault=Add Default
+CommonAddId=Add ID
 CommonAll=All
+CommonAllMethods=All methods
 CommonAmount=Amount
 CommonAnd=And
 CommonAny=Any
+CommonArea=Area
+CommonAt=At
+CommonAttn=Attn
 CommonAvailable=Available
 CommonBack=Back
 CommonBackToOptions=Back to Options
@@ -30,50 +63,91 @@ CommonCheckoutAnonymousMsg=You may checkout without creating an account
 CommonChooseLanguage=Choose Language
 CommonClear=Clear
 CommonClickHere=Click Here
+CommonComingSoon=Coming Soon\!
 CommonComment=Comment
 CommonComments=Comments
 CommonContactUs=Contact Us
 CommonContinue=Continue
+CommonCopy=Copy 
 CommonCouldBeUsedAs=Could be Used as
+CommonCountry=Country
 CommonCreate=Create
 CommonCreateNew=Create New
+CommonCreated=Created
 CommonDate=Date
 CommonDays=Days
 CommonDelete=Delete
+CommonDeleteAll=Delete All
 CommonDescription=Description
+CommonDetail=Detail
 CommonDetails=Details
+CommonDuplicate=Duplicate
 CommonEdit=Edit
 CommonEmailPassword=Email Password
 CommonEmailTo=Email To
+CommonEmailType=Email Type
+CommonEmails=Emails
 CommonExpire=Expire
+CommonExpireAll=Expire All 
 CommonExpires=Expires
+CommonExt=ext
 CommonFieldsMarkedAreRequired=Fields marked with (*) are required.
 CommonFind=Find
+CommonFindAll=Find All
+CommonFinishDate=Finish Date
+CommonFor=For
 CommonForgotYourPassword=Forgot Your Password
+CommonFound=Found
 CommonFrom=From
+CommonFromAddress=From Address
+CommonFromDate=From Date
+CommonFromDateThruDate=From Date / Thru Date
+CommonFromDateTime=From Date & Time
 CommonGetPasswordHint=Get Password Hint
 CommonGoBack=Go Back
 CommonGotoParent=Go To Parent
-CommonInformation=Information
+CommonId=ID
+CommonIdCode=ID Code
+CommonIds=IDs
 CommonInThe=In The
+CommonInformation=Information
+CommonInto=Into
+CommonIntroductionDate=Introduction Date
 CommonLanguageTitle=Language
+CommonLarge=Large
+CommonLastUpdated=LastUpdated
 CommonList=List
-CommonLoginHere=log in here
+CommonListAll=List All
 CommonLogin=Login
+CommonLoginHere=log in here
 CommonLogout=Logout
+CommonLookup=Lookup
 CommonMain=Main
 CommonMatched=Matched
 CommonMayCreate=Create
 CommonMayCreateNewAccountHere=You may create a new account here
+CommonMedium=Medium
 CommonMessage=Message
 CommonMore=More
+CommonN=N
+CommonNA=N/A
+CommonNew=New
 CommonNewUser=New User
 CommonNext=Next
-CommonNo=No
+CommonNo=No 
+CommonNoContactInformationOnFile=No contact information on file
+CommonNone=None
 CommonNot=Not
+CommonNotModifRecreat=cannot change without re-creating
+CommonNotSet=Not Set
 CommonNotYou=Not You
+CommonNote=Note
+CommonNotes=Notes
+CommonNow=Now
 CommonOn=On
 CommonOpenNewWindow=Open in New Window
+CommonOpenPageNewWindow=open page in new window
+CommonOr=OR
 CommonPassword=Password
 CommonPrevious=Previous
 CommonProfile=Profile
@@ -81,28 +155,58 @@ CommonQualifier=Qualifier
 CommonQuantity=Quantity
 CommonQuickAdd=Quick Add
 CommonQuickAddList=Quick Add To Shopping List
+CommonReady=Ready
+CommonReceive=Receive
+CommonReceived=Received
+CommonRed=Red
 CommonRegistred=Registered User
+CommonRejected=Rejected
 CommonRemove=Remove
+CommonRemoveExpired=Remove Expired 
+CommonReset=Reset
+CommonReturn=Return
 CommonReview=Review
 CommonSave=Save
 CommonSavings=Savings
 CommonSearchResultfor=Search Results for
+CommonSecurity=Security
 CommonSelectAll=Select All
 CommonSend=Send
+CommonSendDate=Send Date
+CommonSendEmail=send email
+CommonSequence=Sequence
+CommonSet=Set
+CommonSetNowEmpty=(Will be set to now if empty)
+CommonSince=Since
+CommonSmall=Small
+CommonSpecified=Specified
+CommonStartDate=Start Date
 CommonStatus=Status
-CommonSubtotal=Subtotal
+CommonSubTitle=Sub Title
 CommonSubTotal=Sub Total
+CommonSubmit=Submit
+CommonSubtotal=Subtotal
 CommonTellAFriend=Tell-A-Friend
+CommonTest=Test in english
+CommonTheOpenForBusinessProject=The Open For Business Project
+CommonThru=Thru
+CommonThruDate=Thru Date
+CommonThruDateTime=Thru Date & Time
 CommonTitle=Title
 CommonTo=To
-CommonUpdated=Updated
+CommonUom=UOM
 CommonUpdate=Update
+CommonUpdated=Updated
+CommonUpdatedEffectiveThru=Updated Effective Thru
 CommonUsed=Used
 CommonUsedAs=Used as
 CommonUsername=Username
+CommonValue=Value
 CommonView=View
+CommonViewCalendar=View Calendar
 CommonWelcome=Welcome
 CommonWhere=Where
+CommonY=Y
 CommonYes=Yes
 CommonYouremail=Your email
 
