Consolidated some Common UI labels from various components to the CommonUiLabels file, for English only so far
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@4269 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/components/accounting/config/AccountingUiLabels.properties
+++ b/components/accounting/config/AccountingUiLabels.properties
@@ -1,11 +1,6 @@
 # OFBiz UiLabel Properties used for the accounting module 
 #
 ####
-de=German
-en=English
-fr=French
-pt_PT=Portuguese
-pt_BR=Brazilian Portuguese
 
 ListAccounts=List Gl Accounts
 AccountingMainMenu=Main
@@ -66,7 +61,7 @@ AccountingFixedAssetProductType=Fixed Asset Product Type
 AccountingFixedAssetProducts=Products
 AccountingFixedAssetProductTypeId=Type of usage
 AccountingFixedAssetRollUp=RollUp
-AccountingFixedAssetTypeId =Asset Type
+AccountingFixedAssetTypeId=Asset Type
 AccountingFixedAssets=Fixed Assets
 AccountingFromParty=From Party
 AccountingFromPartyId=From Party ID
@@ -125,66 +120,6 @@ AccountingUpdateBillingAccountTermPermissionError=Security Error: to run updateB
 AccountingUpdateBillingAccount=Update Billing Account
 AccountingUpdatePaymentPermissionError=Security Error: To Update a Payment you must either be the to or from party or have the PAY_INFO_UPDATE or PAY_INFO_ADMIN permissions.
 AccountingViewPermissionError=You do not have permission to view this page. ("ACCOUNTING_VIEW" or "ACCOUNTING_ADMIN" needed)
-CommonAccounting=Accounting
-CommonAugust=August
-CommonApril=April
-CommonAttn=Attn
-CommonCreateNew=Create New
-CommonComments=Comments
-CommonDay=Day
-CommonDecember=December
-CommonDescription=Description
-CommonEdit=Edit
-CommonFebruary=February
-CommonFromDate=From Date
-CommonFrom=From
-CommonFriday=Friday
-CommonId=ID
-CommonJanuary=January
-CommonJune=June
-CommonJuly=July
-CommonLogin=Login
-CommonLogout=Logout
-CommonLookup=Look Up
-CommonMain=Main
-CommonMay=May
-CommonMarch=March
-CommonMonth=Month
-CommonMonday=Monday
-CommonNA=N/A
-CommonNext=Next
-CommonNotModifRecreat=cannot change without re-creating
-CommonNovember=November
-CommonOctober=October
-CommonPassword=Password\:
-CommonPrevious=Previous
-CommonQuantity=Quantity
-CommonQuarter=Quarter
-CommonRegistred=Registered User Login
-CommonRemove=Remove
-CommonSaturday=Saturday
-CommonSave=Save
-CommonSeptember=September
-CommonSet=Set
-CommonSequence=Sequence
-CommonShowLookupFields=Show Lookup Fields
-CommonSunday=Sunday
-CommonTest=Test in english
-CommonThis=This
-CommonThruDate=Thru Date
-CommonThru=Thru
-CommonThursday=Thursday
-CommonTitle=Title
-CommonTo=To
-CommonTuesday=Tuesday
-CommonUom=UOM
-CommonUpdate=Update
-CommonUsername=Username\:
-CommonValue=Value
-CommonView=View
-CommonWeek=Week
-CommonWendesday=Wendesday
-CommonWelcome=Welcome
 
 PageTitleEditBillingAccount=Edit Billing Account
 PageTitleEditBillingAccountInvoices=Edit Billing Account Invoices
@@ -198,6 +133,7 @@ PageTitleLogin=Login
 PageTitleLookupFixedAsset=Lookup Fixed Asset
 PageTitleLookupProduct=Lookup Product
 PageTitleMain=Main Page
+
 PartyPartyId=Party ID
 PartyRoles=Roles
 PartyRoleTypeId=RoleType ID
@@ -205,4 +141,5 @@ PartyTerms=Terms
 PartyTerm=Term
 PartyTermType=Term Type
 PartyTermValue=Term Value
+
 ProductProductId=Product Id
