--- a/components/marketing/config/MarketingUILabels.properties
+++ b/components/marketing/config/MarketingUILabels.properties
@@ -1,8 +1,7 @@
+#
 # OFBiz UiLabel Properties
 #
 ####
 
-CommonLogin=Login
-CommonRegistred=Registered User Login
-CommonPassword=Password\:
-CommonUsername=Username\:
+# empty so far, everything in common UI labels
+
