--- a/components/shark/config/SharkUILabels.properties
+++ b/components/shark/config/SharkUILabels.properties
@@ -1,8 +1,6 @@
+#
 # OFBiz UiLabel Properties
 #
 ####
 
-CommonLogin=Login
-CommonRegistred=Registered User Login
-CommonPassword=Password\:
-CommonUsername=Username\:
+# There is nothing in here yet, everything is coming from the CommonUiLabels
