--- a/components/common/config/CommonUiLabels.properties
+++ b/components/common/config/CommonUiLabels.properties
@@ -23,6 +23,7 @@
 #
 #  $Id: CommonScreens.xml 2951 2004-08-03 16:33:32Z jonesde $
 
+#languages/locales
 bu=Bulgarian
 cz=Czeck
 de=German
@@ -32,7 +33,21 @@ es=Spanish
 fr=French
 gr=Greek
 pt=Portuguese
+pt_PT=Portuguese Portugal
+pt_BR=Portuguese Brazil
 zh=Chinese
+
+#application names
+Accounting=Accounting
+Catalog=Catalog
+Content=Content
+Facility=Facility
+Manufacturing=Manufacturing
+Marketing=Marketing
+Order=Order
+Party=Party
+WebTools=WebTools
+WorkEffort=WorkEffort
 
 
 CommonAccepted=Accepted
@@ -43,30 +58,50 @@ CommonAdd=Add
 CommonAddA=Add a
 CommonAddDefault=Add Default
 CommonAddId=Add ID
+CommonAddNew=Add New
+CommonAddressLine=Address Line
 CommonAll=All
+CommonAllDay=All Day
 CommonAllMethods=All methods
+CommonAllWeek=All Week
+CommonAllowSolicitation=(allow solicitation?)
 CommonAmount=Amount
 CommonAnd=And
 CommonAny=Any
+CommonAnyOrderStatus=Any Order Status
+CommonAnyOrderType=Any Order Type
+CommonAnyReturnStatus=Any return status
+CommonAnyRoleType=Any Role Type
+CommonAnyStore=Any Store
+CommonAnyWebSite=Any Web Site
+CommonApply=Apply
+CommonApril=April
 CommonArea=Area
 CommonAt=At
+CommonAttentionName=Attention Name
 CommonAttn=Attn
+CommonAugust=August
 CommonAvailable=Available
 CommonBack=Back
+CommonBackToList=Back To List
 CommonBackToOptions=Back to Options
 CommonBenefit=Benefit
 CommonBy=By
 CommonCancel=Cancel
+CommonCancelAll=Cancel All
+CommonChange=Change
 CommonChecking=Checking
 CommonCheckoutAnonymous=Checkout Without Login
 CommonCheckoutAnonymousMsg=You may checkout without creating an account
 CommonChooseLanguage=Choose Language
+CommonCity=City
 CommonClear=Clear
 CommonClickHere=Click Here
 CommonComingSoon=Coming Soon\!
 CommonComment=Comment
 CommonComments=Comments
 CommonContactUs=Contact Us
+CommonContent=Content
 CommonContinue=Continue
 CommonCopy=Copy 
 CommonCouldBeUsedAs=Could be Used as
@@ -74,48 +109,73 @@ CommonCountry=Country
 CommonCreate=Create
 CommonCreateNew=Create New
 CommonCreated=Created
+CommonCreatedBy=Created By
+CommonCurrent=Current
 CommonDate=Date
+CommonDateFilter=Date Filter
+CommonDay=Day
 CommonDays=Days
+CommonDecember=December
 CommonDelete=Delete
 CommonDeleteAll=Delete All
 CommonDescription=Description
 CommonDetail=Detail
 CommonDetails=Details
+CommonDisabled=Disabled
 CommonDuplicate=Duplicate
 CommonEdit=Edit
+CommonElementsFound=Elements Found
 CommonEmailPassword=Email Password
 CommonEmailTo=Email To
 CommonEmailType=Email Type
 CommonEmails=Emails
+CommonEndDateTime=End Date/Time
+CommonEventDate=EventDate
 CommonExpire=Expire
 CommonExpireAll=Expire All 
+CommonExpireDate=Expire Date
 CommonExpires=Expires
 CommonExt=ext
+CommonFebruary=February
 CommonFieldsMarkedAreRequired=Fields marked with (*) are required.
 CommonFind=Find
 CommonFindAll=Find All
 CommonFinishDate=Finish Date
+CommonFinishDate=Finish Date/Time
 CommonFor=For
 CommonForgotYourPassword=Forgot Your Password
+CommonFormatDateFieldNotCorrect=One of the date field is incorrect, format must be AAAA-mm-jj HH:mm:ss
+CommonFormatDateTime=YYYY-MM-DD hh:mm:ss
 CommonFound=Found
+CommonFriday=Friday
 CommonFrom=From
 CommonFromAddress=From Address
 CommonFromDate=From Date
+CommonFromDateMissing=From Date is missing
+CommonFromDateNotValidDateTime=From Date is not a valid Date-Time.
 CommonFromDateThruDate=From Date / Thru Date
 CommonFromDateTime=From Date & Time
 CommonGetPasswordHint=Get Password Hint
 CommonGoBack=Go Back
 CommonGotoParent=Go To Parent
+CommonGroup=Group
+CommonHideFields=Hide Fields
+CommonHour=Hour
 CommonId=ID
 CommonIdCode=ID Code
+CommonIdentifier=Identifier
 CommonIds=IDs
 CommonInThe=In The
 CommonInformation=Information
 CommonInto=Into
 CommonIntroductionDate=Introduction Date
+CommonItem=Item
+CommonJanuary=January
+CommonJuly=July
+CommonJune=June
 CommonLanguageTitle=Language
 CommonLarge=Large
-CommonLastUpdated=LastUpdated
+CommonLastUpdated=Last Updated
 CommonList=List
 CommonListAll=List All
 CommonLogin=Login
@@ -123,77 +183,128 @@ CommonLoginHere=log in here
 CommonLogout=Logout
 CommonLookup=Lookup
 CommonMain=Main
+CommonMarch=March
 CommonMatched=Matched
+CommonMay=May
 CommonMayCreate=Create
 CommonMayCreateNewAccountHere=You may create a new account here
 CommonMedium=Medium
 CommonMessage=Message
+CommonMethod=Method
+CommonMonday=Monday
+CommonMonth=Month
 CommonMore=More
+CommonMyStatus=Mon statut
 CommonN=N
 CommonNA=N/A
+CommonName=Name
 CommonNew=New
+CommonNewSelection=New Selection
 CommonNewUser=New User
 CommonNext=Next
 CommonNo=No 
+CommonNoAddress=No Address
 CommonNoContactInformationOnFile=No contact information on file
+CommonNoElementFound=No element found
+CommonNoParent=No Parent
+CommonNoTaskAssigned=No tasks currently require your attention.
 CommonNone=None
 CommonNot=Not
 CommonNotModifRecreat=cannot change without re-creating
 CommonNotSet=Not Set
+CommonNotYetImplemented=Not yet implemented
 CommonNotYou=Not You
 CommonNote=Note
 CommonNotes=Notes
+CommonNovember=November
 CommonNow=Now
+CommonOctober=October
+CommonOf=of
 CommonOn=On
 CommonOpenNewWindow=Open in New Window
 CommonOpenPageNewWindow=open page in new window
+CommonOptions=Options
 CommonOr=OR
+CommonOverridesSelection=(overrides either of the above selections.)
 CommonPassword=Password
+CommonPerson=Person
 CommonPrevious=Previous
+CommonPriority=Priority
 CommonProfile=Profile
 CommonQualifier=Qualifier
+CommonQuantity=EventQuantity
 CommonQuantity=Quantity
+CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
 CommonQuickAddList=Quick Add To Shopping List
 CommonReady=Ready
 CommonReceive=Receive
 CommonReceived=Received
 CommonRed=Red
+CommonRefresh=Refresh
 CommonRegistred=Registered User
 CommonRejected=Rejected
+CommonRemove=Enlever
 CommonRemove=Remove
 CommonRemoveExpired=Remove Expired 
+CommonReports=Reports
+CommonRequired=Required
 CommonReset=Reset
+CommonResultLookup=Result of lookup
 CommonReturn=Return
+CommonReturnStatus=Return Status
 CommonReview=Review
+CommonRun=Run
+CommonSaturday=Saturday
 CommonSave=Save
 CommonSavings=Savings
 CommonSearchResultfor=Search Results for
 CommonSecurity=Security
 CommonSelectAll=Select All
+CommonSelectOne=Select One
+CommonSelected=selected
+CommonSelection=Selection
 CommonSend=Send
 CommonSendDate=Send Date
 CommonSendEmail=send email
+CommonSeptember=September
 CommonSequence=Sequence
+CommonSequenceNum=Sequence Num
 CommonSet=Set
 CommonSetNowEmpty=(Will be set to now if empty)
+CommonShowAll=Show All
+CommonShowAllRecords=Show all records
+CommonShowLookupFields=Show Lookup Fields
 CommonSince=Since
 CommonSmall=Small
 CommonSpecified=Specified
 CommonStartDate=Start Date
+CommonStartDateTime=Start Date/Time
+CommonStateProvince=State/Province
+CommonStats=Stats
 CommonStatus=Status
 CommonSubTitle=Sub Title
 CommonSubTotal=Sub Total
 CommonSubmit=Submit
 CommonSubtotal=Subtotal
+CommonSunday=Sunday
 CommonTellAFriend=Tell-A-Friend
-CommonTest=Test in english
+CommonTest=Test
 CommonTheOpenForBusinessProject=The Open For Business Project
+CommonThis=This
 CommonThru=Thru
 CommonThruDate=Thru Date
 CommonThruDateTime=Thru Date & Time
+CommonThursday=Thursday
+CommonTime=Time
 CommonTitle=Title
 CommonTo=To
+CommonToName=To Name
+CommonToday=Today
+CommonTotal=Total   
+CommonTuesday=Tuesday
+CommonUnitPrice=Unit Price
+CommonUntil=Until
 CommonUom=UOM
 CommonUpdate=Update
 CommonUpdated=Updated
@@ -204,11 +315,17 @@ CommonUsername=Username
 CommonValue=Value
 CommonView=View
 CommonViewCalendar=View Calendar
+CommonWednesday=Wednesday
+CommonWeek=Week
 CommonWelcome=Welcome
+CommonWendesday=Wendesday
 CommonWhere=Where
+CommonWorkflowActivityUser=Workflow Activities Assigned to User
+CommonWorkflowActivityUserRole=Workflow Activities Assigned to User Role
 CommonY=Y
 CommonYes=Yes
 CommonYouremail=Your email
+CommonZipPostalCode=Zip/Postal Code
 
 Factoids=Did you know?
 MostRecentlyViewed=Recently Viewed
