--- a/components/manufacturing/config/ManufacturingUiLabels.properties
+++ b/components/manufacturing/config/ManufacturingUiLabels.properties
@@ -1,69 +1,6 @@
 ####
 # OFBiz UiLabel Properties used for the manufacturing components 
 #
-Accounting=Accounting
-Catalog=Catalog
-Content=Content
-Facility=Facility
-Manufacturing=Manufacturing
-Marketing=Marketing
-Order=Order
-Party=Party
-WebTools=WebTools
-WorkEffort=WorkEffort
-
-CommonAdd=Add
-CommonAny=Any
-CommonBackToList=Back To List
-CommonDay=Day
-CommonDelete=Delete
-CommonDescription=Description
-CommonEdit=Edit
-CommonElementsFound=Elements Found
-CommonEventDate=EventDate
-CommonQuantity=EventQuantity
-CommonFind=Find
-CommonFormatDateFieldNotCorrect=One of the date field is incorrect, format must be AAAA-mm-jj HH:mm:ss
-CommonFriday=Friday
-CommonFromDate=From Date
-CommonHideFields=Hide Fields
-CommonHour=Hour
-CommonId=ID
-CommonLogin=Login
-CommonLogout=Logout
-CommonLookup=Lookup
-CommonMain=Main
-CommonMonday=Monday
-CommonNewSelection=New Selection
-CommonNext=Next
-CommonNoElementFound=No element found
-CommonNotModifRecreat=cannot change without re-creating
-CommonNotYetImplemented=Not yet implemented
-CommonOf=of
-CommonPassword=Password\:
-CommonPrevious=Previous
-CommonQuantity=EventQuantity
-CommonRegistred=Registered User Login
-CommonResultLookup=Result of lookup
-CommonSaturday=Saturday
-CommonSave=Save
-CommonSelected=Selected
-CommonSelection=Selection
-CommonSequenceNum=Sequence Num
-CommonSet=Set
-CommonShowLookupFields=Show Lookup Fields
-CommonStatus=Status
-CommonSubmit=Submit
-CommonSunday=Sunday
-CommonThruDate=Thru Date
-CommonThursday=Thursday
-CommonTuesday=Tuesday
-CommonUpdate=Update
-CommonUsername=Username\:
-CommonWeek=Week
-CommonView=View
-CommonWednesday=Wednesday
-CommonWelcome=Welcome
 
 ManufacturingAddExistingRoutingTask=Add a existing RoutingTask
 ManufacturingAddProductionRunProductComponent=Add ProductComponent to ProductionRun
@@ -226,6 +163,41 @@ ManufacturingWorkEffortAssocNotExist=WorkEffortAssoc does not exist
 ManufacturingWorkEffortGoodStandardNotExist=WorkEffortGoodStandard table does not exist
 ManufacturingWorkEffortIdFromNotExist=workEffortIdFrom does not exist
 
+ManufacturingLLCInit=Init Low Level Codes
+ManufacturingExplosionSingleLevel=Single Level Explosion
+ManufacturingExplosionManufacturing=Explosion (only for products needing manufacturing)
+ManufacturingDuplicatedComponentInBOM=The following existing association could cause loops: {0} --> {1}
+ManufacturingProductionRunPrintDocuments=Print Manufacturing Documents
+ManufacturingTaskActualSetupMillis=Actual Setup Time
+ManufacturingTaskActualMilliSeconds=Actual Time
+ManufacturingStartProductionRunTask=Start
+ManufacturingCompleteProductionRunTask=Complete
+ManufacturingIssueProductionRunTask=Issue Components
+ManufacturingDeclareProductionRunTask=Declare
+ManufacturingProductionRunClose=Close Production Run
+ManufacturingIssuedQuantity=Issued
+ManufacturingProduceQuantity=Stock in
+ManufacturingQuantityProduced=Produced
+ManufacturingQuantityRejected=Rejected
+ManufacturingInventoryItemsProduced=Inventory Items
+ManufacturingEstimatedStartDate=Estimated Start Date
+ManufacturingActualStartDate=Start Date
+ManufacturingActualCompletionDate=Completion Date
+ManufacturingQuantityToProduce=Qty To Produce
+ManufacturingFromDate=From Date
+ManufacturingToDate=To Date
+ManufacturingAddSetupTime=Add Setup Time
+ManufacturingAddTaskTime=Add Task Time
+ManufacturingAddQuantityProduced=Add Qty Produced
+ManufacturingAddQuantityRejected=Add Qty Rejected
+ManufacturingComments=Comments
+ManufacturingWorker=Worker
+ManufacturingOrderItems=Order Items
+ManufacturingWorkWithShipmentPlans=Shipment Plans
+ManufacturingShowBOMAssocs=Show BOM
+ManufacturingCopyBOMAssocs=Copy BOM
+ManufacturingCopyToProductId=To Product Id
+
 PageTitleEditCalendar=Edit Calendar
 PageTitleEditCalendarExceptionDay=Edit Calendar Exception Day
 PageTitleEditCalendarExceptionWeek=Edit Calendar Exception Week
@@ -259,72 +231,3 @@ ProductProductInternalName=Internal Name
 ProductProductName=Product Name 
 ProductProductType=Product Type
 
-CommonRun=Run
-
-ManufacturingLLCInit=Init Low Level Codes
-
-ManufacturingExplosionSingleLevel=Single Level Explosion
-
-ManufacturingExplosionManufacturing=Explosion (only for products needing manufacturing)
-
-ManufacturingDuplicatedComponentInBOM=The following existing association could cause loops: {0} --> {1}
-
-ManufacturingProductionRunPrintDocuments=Print Manufacturing Documents
-
-ManufacturingTaskActualSetupMillis=Actual Setup Time
-
-ManufacturingTaskActualMilliSeconds=Actual Time
-
-ManufacturingStartProductionRunTask=Start
-
-ManufacturingCompleteProductionRunTask=Complete
-
-ManufacturingIssueProductionRunTask=Issue Components
-
-ManufacturingDeclareProductionRunTask=Declare
-
-ManufacturingProductionRunClose=Close Production Run
-
-ManufacturingIssuedQuantity=Issued
-
-ManufacturingProduceQuantity=Stock in
-
-ManufacturingQuantityProduced=Produced
-
-ManufacturingQuantityRejected=Rejected
-
-ManufacturingInventoryItemsProduced=Inventory Items
-
-ManufacturingEstimatedStartDate=Estimated Start Date
-
-ManufacturingActualStartDate=Start Date
-
-ManufacturingActualCompletionDate=Completion Date
-
-ManufacturingQuantityToProduce =Qty To Produce
-
-ManufacturingFromDate=From Date
-
-ManufacturingToDate=To Date
-
-ManufacturingAddSetupTime=Add Setup Time
-
-ManufacturingAddTaskTime=Add Task Time
-
-ManufacturingAddQuantityProduced=Add Qty Produced
-
-ManufacturingAddQuantityRejected=Add Qty Rejected
-
-ManufacturingComments=Comments
-
-ManufacturingWorker=Worker
-
-ManufacturingOrderItems=Order Items
-
-ManufacturingWorkWithShipmentPlans=Shipment Plans
-
-ManufacturingShowBOMAssocs=Show BOM
-
-ManufacturingCopyBOMAssocs=Copy BOM
-
-ManufacturingCopyToProductId=To Product Id
